Ensure movie list does not overflow

--- a/challenges/misc/movie-secrets/source/styles.css
+++ b/challenges/misc/movie-secrets/source/styles.css
@@ -36,7 +36,7 @@ body{
 
 .movie-list{
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(9, 1fr);
     grid-gap: 1rem;
     max-width: 100vw;
     overflow: scroll;
